# superautoclone

./: Animals.toml  Cargo.toml
src/: events.rs  formatting.rs  game.rs  lib.rs  main.rs  pet.rs  shop.rs  team.rs  triggers.rs
src/pet/: mod.rs  pet_builder.rs  pets.toml  reactions.rs
