[package]
name = "super_auto_clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.9"
toml = "0.7.6"
unicode-width = "0.1.10"

[dependencies.serde]
version = "1.0.188"
features = ["derive"]